# netsec-tester

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  USAGE.md
src/netsec_tester/: __init__.py  cli.py
src/netsec_tester/config/: __init__.py  loader.py  scenarios.yaml
src/netsec_tester/core/: __init__.py  engine.py  ip_pool.py  stats.py
src/netsec_tester/modules/: __init__.py  base.py
src/netsec_tester/modules/antivirus/: __init__.py  archive_evasion.py  cryptominer.py  dropper.py  eicar.py  ransomware.py  signatures.py
src/netsec_tester/modules/benign/: __init__.py  cloud_services.py  email.py  file_transfer.py  iot_device.py  mobile_app.py  vpn_proxy.py  web_browsing.py
src/netsec_tester/modules/dns_filter/: __init__.py  amplification.py  dga.py  exfiltration.py  fast_flux.py  malicious_domains.py  rebinding.py  tunneling.py
src/netsec_tester/modules/exfiltration/: __init__.py  https_exfil.py  icmp_covert.py  protocol_abuse.py
src/netsec_tester/modules/ips_ids/: __init__.py  brute_force.py  c2_beacon.py  command_injection.py  deserialization.py  directory_traversal.py  dos_patterns.py  exploits.py  protocol_anomaly.py  reconnaissance.py  sql_injection.py  ssrf_xxe.py  xss.py
src/netsec_tester/modules/video_filter/: __init__.py  gaming.py  p2p_torrent.py  streaming.py  voip_webrtc.py
src/netsec_tester/modules/web_filter/: __init__.py  api_abuse.py  categories.py  http_smuggling.py  tls_inspection.py  url_patterns.py  web_shells.py
src/netsec_tester/scenarios/: __init__.py  base.py  registry.py
tests/: __init__.py  conftest.py  test_cli.py  test_ip_pool.py  test_modules.py  test_scenarios.py  test_stats.py
